[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-batches-meta-reference"
version = "0.1.0"
description = "Meta's reference implementation of batches API with KVStore persistence."
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "openai"
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
