[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-datasetio-localfs"
version = "0.1.0"
description = "Local filesystem-based dataset I/O provider for reading and writing datasets to local storage"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "pandas",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
