[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-inference-sentence-transformers"
version = "0.1.0"
description = "Sentence Transformers inference provider for text embeddings and similarity search"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "torch",
    "torchvision",
    "sentence-transformers",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
