[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-safety-code-scanner"
version = "0.1.0"
description = "Code Scanner safety provider for detecting security vulnerabilities and unsafe code patterns"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "codeshield",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
