[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-safety-llama-guard"
version = "0.1.0"
description = "Llama Guard safety provider for content moderation and safety filtering using Meta's Llama Guard model"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = []



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
