[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-safety-prompt-guard"
version = "0.1.0"
description = "Prompt Guard safety provider for detecting and filtering unsafe prompts and content"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "transformers[accelerate]",
    "torch",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
