[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-scoring-basic"
version = "0.1.0"
description = "Basic scoring provider for simple evaluation metrics and scoring functions"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "requests",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
