[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-scoring-braintrust"
version = "0.1.0"
description = "Braintrust scoring provider for evaluation and scoring using the Braintrust platform"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "autoevals",
    "openai",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
