[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-scoring-llm-as-judge"
version = "0.1.0"
description = "LLM-as-judge scoring provider that uses language models to evaluate and score responses"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = []



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
