[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-telemetry-meta-reference"
version = "0.1.0"
description = "Meta's reference implementation of telemetry and observability using OpenTelemetry"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
